# cmx-battleship-online-api

./: .gitignore  Dockerfile  README.md  default.properties  docker-compose.yml  package-lock.json  pyproject.toml  test.properties
.github/workflows/: publish.yml
nginx/: Dockerfile  nginx.conf
src/: manage.py
src/app/: asgi.py  authentication.py  connections.py  decorators.py  default.py  local.py  permissions.py  prod.py  settings.py  test.py  tests.py  urls.py  utils.py  views.py
src/app/test/: runner.py  settings.py
src/core/: tests.py  views.py
src/core/migrations/: 0001_create_user_session_table.py  0002_create_game_request.py  0003_create_game_session.py  0004_extend_game_session.py
src/db/migrations/: 0001_create_user_session_table.py  0002_create_game_request.py  0003_create_game_session.py
src/game/: __init__.py  daos.py  models.py  tests.py  views.py
src/game/models/: __init__.py  gameboard.py  gameplay.py  gamesession.py  gamestate.py  validation.py
src/lobby/: __init__.py  daos.py  models.py  views.py
src/user_session/: __init__.py  daos.py  models.py  views.py
src/user_session/migrations/: 0001_create_user_session_table.py  0002_create_game_request.py  0003_create_game_session.py
